    - remove USE_DWZ_MULTIFILE conditional (which was disabled),
      default since debhelper 11.3
    - make BUILD_TEST_PACKAGES=y be based on DEB_BUILD_PROFILES, not
      DEB_BUILD_OPTIONS
  * debian/control.test-packages.in:
    - add Build-Profiles: <!nocheck>
  * debian/control.sdk.in:
    - add Build-Profiles: <!nodoc> for -dev-doc

 -- Rene Engelhard <rene@debian.org>  Thu, 07 Jun 2018 23:51:50 +0200

libreoffice (1:6.1.0~beta1-1) experimental; urgency=medium

  * New upstream beta release
    - allows rk on .gnupg/random_seed to fix hang on gpg encryption
      (closes: #899380)

  * debian/tests/patches/odk-build-examples-standalone.diff: make apply again
  * debian/patches/do-not-hide-test-output.diff: as name says. to prevent
    slow(er) archs/buildds timing about because e.g. the new uitests might take
    too long without an output
  * debian/patches/no-ant-check-if-unneeded.diff: as name says, only check
    for ant if we really need it for building something

  * debian/rules:
    - build-depend on fontforge-nox and rebuild opens___.tff from OpenSymbol.sfd
    - fix numbertext-data-recommends substvar
    - optimize the build-indep build a bit more
      + remove build-indep dependency on build-arch to not run the full
        testsuite on -A (build-indep) builds.
        Only run the odk "check" (SDK files) and build-example tests
      + build without --enable-symbols on build-indep builds
    - enable (gtk3_)kde5 (and qt5) only on 64bit archs for now
    - make -help-xx depend with = on -help-common and -help-common depend on
      x-www-browser, too, it already contains HTML
    - rebuild smoketestdoc.sxw; install it into libreoffice-smoketest-data
    - move ant to Build-Depends-Indep
  * debian/tests/odk-build-examples: fix
  * debian/control.in: move numbertext-data-recommends to Depends: as the
    numbertext stuff is used for ooxml im/export.. (theoretical, since
    libnumbertext depends on it already, but...)