@@ -394,7 +394,7 @@ Description: office productivity suite -- arch-dependent files
 
 Package: libreoffice-common
 Architecture: all
-Depends: libreoffice-style-colibre,
+Depends: libreoffice-style-tango,
          ure,
          ${misc:Depends},
          ${numbertext-data-recommends}
@@ -569,7 +569,7 @@ Description: office productivity suite -- database
 Package: libreoffice-style-breeze
 Architecture: all
 Enhances: libreoffice-core
-Depends: libreoffice-style-colibre, ${misc:Depends}
+Depends: libreoffice-style-tango, ${misc:Depends}
 Suggests: breeze-icon-theme
 Provides: libreoffice-style
 Description: office productivity suite -- Breeze symbol style
@@ -593,7 +593,7 @@ Description: office productivity suite -- colibre symbol style
 Package: libreoffice-style-tango
 Architecture: all
 Enhances: libreoffice-core
-Depends: libreoffice-style-colibre, ${misc:Depends}
+Depends: ${misc:Depends}
 Suggests: tango-icon-theme
 Provides: libreoffice-style
 Replaces: libreoffice-common (<= 1:4.3.0~beta2-2)
@@ -620,7 +620,7 @@ Description: office productivity suite -- Sifr symbol style
 
 Package: libreoffice-style-elementary
 Architecture: all
-Depends: libreoffice-style-colibre, ${misc:Depends}
+Depends: libreoffice-style-tango, ${misc:Depends}
 Enhances: libreoffice-core
 Provides: libreoffice-style
 Description: office productivity suite -- Elementary symbol style
