@@ -24,6 +24,8 @@ libreoffice (1:6.1.0~beta2~git20180607-1) UNRELEASED; urgency=medium
     - add Build-Profiles: <!nocheck>
   * debian/control.sdk.in:
     - add Build-Profiles: <!nodoc> for -dev-doc
+  * debian/control.in:
+    - the colibre change was reverted; make -common depend on -style-tango
 
  -- Rene Engelhard <rene@debian.org>  Thu, 07 Jun 2018 23:51:50 +0200
 
